rename to wow-tabs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wowtabs",
+  "name": "wow-tabs",
   "version": "0.1.0",
   "description": "The last tabs implementation you'll ever need.",
   "main": "wowtabs.html",
