--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,14 @@
 {
   "name": "wow-tabs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/matthewp/wow-tabs",
   "authors": [
     "Matthew Phillips <matthew@matthewphillips.info>"
   ],
   "description": "The last tabs you'll need",
   "main": "wowtabs.html",
-  "moduleType": [
-    "globals"
-  ],
   "keywords": [
-    "web",
-    "components",
+    "web-components",
     "tabs"
   ],
   "license": "BSD-2-Clause",
