--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Matthew Phillips",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "mocha-test": "^1.0.3",
+    "webcomponents.js": "^0.7.22"
   }
 }
