--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "testee --browsers firefox test/basics.html test/position.html"
+    "test": "testee --browsers chrome test/basics.html test/position.html"
   },
   "keywords": [
     "tabs",
@@ -19,7 +19,6 @@
   "author": "Matthew Phillips",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "mocha-test": "^1.0.3",
-    "webcomponents.js": "^0.7.22"
+    "mocha-test": "^2.0.0"
   }
 }
