--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "testee --browsers chrome test/basics.html test/position.html"
+    "test": "testee --browsers chromium test/basics.html test/position.html"
   },
   "keywords": [
     "tabs",
